# opcua-client-s7-1500

./: README.md  pyproject.toml
opcua_client/: __init__.py  opcua_client.py
tests/: integration.py  test_opcua_client.py
